# pj64-parallelrdp

./: .gitignore  .gitmodules  CMakeLists.txt  parallel-rdp-standalone.vcxproj  parallel-rdp-standalone.vcxproj.filters  pj64-parallel-rdp.sln  pj64-parallel-rdp.vcxproj  pj64-parallel-rdp.vcxproj.filters
src/: CMakeLists.txt  config.c  config.h  config_gui.c  config_gui.h  config_gui_resources.h  config_gui_resources.rc  gfx_1.3.cpp  ini.c  ini.h  parallel-rdp-standalone.cmake  parallel_imp.cpp  parallel_imp.h  queue_executor.cpp  queue_executor.h
src/retroarch/: compat_strl.c  compat_strl.h  dispserv_win32.c  driver.c  driver.h  filter.h  gfx_display.c  gfx_display.h  gfx_display_vulkan.c  matrix_4x4.h  pixconv.c  pixconv.h  retro_vulkan.c  retroarch.c  retroarch.h  rthreads.c  rthreads.h  scaler.c  scaler.h  scaler_filter.c  scaler_int.c  scaler_int.h  shader_vulkan.cpp  shader_vulkan.h  slang_reflection.cpp~RF14c102d.TMP  slang_reflection.h  string_list.c  string_list.h  video_display_server.h  video_driver.c  video_driver.h  vulkan_common.c  vulkan_common.h  w_vk_ctx.c  win32_common.c  win32_common.h
src/screenshot/: screenshot.cpp  screenshot.h
